# Vortex

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini
include/: Organizer.h  Shader.h  Shape.cpp  Shape.h  Vortex.h  texture.cpp  texture.h
include/glad/: gl.h
shaders/: FragmentShader.glsl  VertexShader.glsl
src/: Shader.cpp  Vortex.cpp  imGuiSetup.cpp  main.cpp  window.cpp
